modifying everything